[project]
name = "granular-data-grouping"
version = "0.1.0"
description = "Granular clustering experiments for selecting one dominant cluster"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "scipy>=1.11",
  "scikit-learn>=1.4",
  "pandas>=2.1",
  "pillow>=10.0",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
